# LambdaForge

./: README.md  pyproject.toml
notebooks/: 4_2.ipynb
src/: recombinator.py  tree_form.py  util_exprs.py
src/LambdaForge/: chain_beta.py  lambda_terms.py  main.py  recombinator.py  tree_form.py  util_exprs.py
